# doxi

./: .gitignore  BUILD.bazel  README.md  doxi  doxi.go  go.mod
docs/src/: doxi.go.md
docs/src/dox/: data.go.md  dir.go.md  docs.go.md  files.go.md
dox/: BUILD.bazel  data.go  dir.go  docs.go  files.go
